添加样式的文件

--- a/Dot/DotEditor/DotEditor.csproj
+++ b/Dot/DotEditor/DotEditor.csproj
@@ -83,6 +83,8 @@
     <Compile Include="Config\Ini\IniConfigUtil.cs" />
     <Compile Include="Config\Ini\IniConfigWindow.cs" />
     <Compile Include="Config\Ndb\NDBViewer.cs" />
+    <Compile Include="EditorStyleViewer\BuiltInResourcesWindow.cs" />
+    <Compile Include="EditorStyleViewer\EditorStyleViewer.cs" />
     <Compile Include="Entity\Avatar\AvatarCreatorData.cs" />
     <Compile Include="Entity\Avatar\AvatarCreatorDataEditor.cs" />
     <Compile Include="Entity\Avatar\AvatarCreatorUtil.cs" />
