--- a/Dot/DotEngine/DotEngine.csproj
+++ b/Dot/DotEngine/DotEngine.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;UNITY_EDITOR</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -108,6 +108,8 @@
     <Compile Include="BehaviourLine\Line\TimelineData.cs" />
     <Compile Include="BehaviourLine\Track\Trackline.cs" />
     <Compile Include="BehaviourLine\Track\TracklineData.cs" />
+    <Compile Include="BMFont\BMFontData.cs" />
+    <Compile Include="BMFont\BMFontText.cs" />
     <Compile Include="Config\IniConfigService.cs" />
     <Compile Include="Config\Ini\IniConfig.cs" />
     <Compile Include="Config\NDBService.cs" />
@@ -243,6 +245,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Lua\" />
     <Folder Include="Net\Depends\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
